--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
@@ -23,7 +23,10 @@
     
 
 </body>
-<script src="./script/nkn.min.js"></script>
-<script src="./script/main.js"></script>
+<script src="./js/nkn.min.js"></script>
+<script src="./js/main.js"></script>
+<script src="./js/receive.js"></script>
+<script src="./js/send.js"></script>
+
 
 </html>
