--- a/index.html
+++ b/index.html
@@ -23,9 +23,12 @@
     
 
 </body>
-<script src="./js/nkn.min.js"></script>
+
 <script src="./js/main.js"></script>
+<script src="./js/send.js"></script>
+<script src="./js/receive.js"></script>
+
+<script src="./js/nkn.min.js"></script>
 <script src="./js/streams.js"></script>
 <script src="./js/streamsaver.js"></script>
-
 </html>
