--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     </div>
 
     <div>
+        <span class="sendButton" onclick="clearMessages()">Clear Messages</span>
         <ul id="revData">
             
         </ul>
